# griptape-search-driver-extensions

./: README.md  pyproject.toml
examples/tools/: example_agent.py
griptape/serper/drivers/serper_web_search/: driver.py
tests/unit/tools/: test_serper_search_tool.py
