[tool.poetry]
name = "griptape_serper_driver_extension"
version = "0.1.0"
description = "A Griptape plugin for Serper search driver"
authors = ["Mert Deveci <mert@troylabs.io>"]
readme = "README.md"
packages = [
    {include = "griptape/serper"},
]

[tool.poetry.dependencies]
python = "^3.9"
griptape = "^1.0.0"
anyio = ">=3.0.0"
httpx = ">=0.24.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
pytest-mock = "^3.1.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pyright = { version = "^1.1.376", extras=["nodejs"] }
pre-commit = "^4.0.0"
typos = "^1.22.9"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["griptape"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



